objects/ASI_CRM_Division_Security_Setting__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>ASI_CRM_Division__c</referenceTo>
        <relationshipLabel>Division Security Settings</relationshipLabel>
        <relationshipName>Division_Security_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_On_Off__c</fullName>
        <label>On/Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>WS Manager</fullName>
                </value>
                <value>
                    <fullName>Channel Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>BAs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team</label>
        <referenceTo>ASI_CRM_Sales_Team__c</referenceTo>
        <relationshipLabel>Division Security Settings</relationshipLabel>
        <relationshipName>Division_Security_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division_Security_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Division Security Setting</label>
    <listViews>
        <fullName>All_Even_View3</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_Role__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>ASI_CRM_On_Off__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_User__c</field>
            <operation>equals</operation>
            <value>Alice ZHANG</value>
        </filters>
        <label>All-division</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Shanghai</fullName>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_Role__c</columns>
        <columns>ASI_CRM_User__c</columns>
        <columns>ASI_CRM_On_Off__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Division__c</field>
            <operation>equals</operation>
            <value>Shanghai(Div)</value>
        </filters>
        <label>Shanghai</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DSS-{00000}</displayFormat>
        <label>DSS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Division Security Settings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Division_Security_Setting</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_Division_Security_Setting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_Role_Validation</fullName>
        <active>true</active>
        <description>If Field: Role&apos;s value is Channel Manager, On/Off can not be null or blank
If Field: Role&apos;s value is NOT Channel Manager, On/Off  must be null or blank</description>
        <errorConditionFormula>OR((ISPICKVAL(ASI_CRM_Role__c, &quot;Channel Manager&quot;) &amp;&amp; (OR(ISNULL(TEXT(ASI_CRM_On_Off__c)),ISBLANK(TEXT(ASI_CRM_On_Off__c))))),((NOT(ISPICKVAL(ASI_CRM_Role__c, &quot;Channel Manager&quot;)))&amp;&amp; (AND(NOT(ISNULL(TEXT(ASI_CRM_On_Off__c))),NOT(ISBLANK(TEXT(ASI_CRM_On_Off__c)))))))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_On_Off__c</errorDisplayField>
        <errorMessage>If Field: Role&apos;s value is Channel Manager, On/Off can not be null or blank;
If Field: Role&apos;s value is NOT Channel Manager, On/Off  must be null or blank.</errorMessage>
    </validationRules>
</CustomObject>